--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  font-family: sans-serif;
+  font-family: sans serif;
+  /* background-color: rgb(36, 154, 125) */
 }
